--- a/tex/customdef.tex
+++ b/tex/customdef.tex
@@ -17,7 +17,7 @@
 %\draftQfalse
 %--------------
 %###################################
-\def\TITLE{\LARGE \enet: Fast Scalable Pandemic Risk Estimation of  \infl Strains Collected In Non-human Hosts}
+\def\TITLE{\LARGE \enet: Fast Scalable Pandemic Risk Assessment of \infl Strains Circulating In Non-human Hosts}
 %\def\TITLE{\LARGE A Biologically Meaningful Sequence Metric\\For Analyzing Evolutionary Changes\\In Novel Pathogens}
 %\def\TITLE{Learning  Mutational Patterns At Scale For\\Analysis Of Sequence Divergence\\In Novel Pathogens}
 %\def\TITLE{Learning Mutational Patterns at Scale to Analyze Sequence Divergence in Novel Pathogens}
