--- a/tex/main.tex
+++ b/tex/main.tex
@@ -62,7 +62,7 @@
 \maketitle
 
 {\bf \sffamily \fontsize{10}{12}\selectfont \noindent   
-  {\normalfont \itshape Abstract:} Novel \infl  strains emerging into humans from animal reservoirs can cause large antigenic shifts in the circulating strain, and such events are suspected to have triggered numerous  pandemics in the past~\cite{shao2017evolution,mills2004transmissibility,reid2003origin,landolt2007up}, often exacting a devastating toll on human lives. Yet, our current ability to  scalably  evaluate the pandemic potential of   individual strains that do not yet circulate in humans remains limited. In this study, we introduce a computational approach, known as the \enet,  to learn how viable genotypic variations are shaped by  emergent evolutionary constraints using only genomic sequence data of collected strains.    Analyzing    Hemaglutinnin (HA) and Neuraminidase (NA) amino acid sequences from nearly 100,000 unique \infl  strains from public  databases, our proposed algorithm merges machine learning and large deviation theory to  estimate the likelihood of  specific future  mutations, ultimately  yielding the  numerical odds of one parent strain giving rise to a specific descendant via natural evolutionary processes. After validating our model on the problem of forecasting the dominant strain(s) of the upcoming flu season, with \enet-based forecasts significantly outperforming World Health Organization (WHO) recommended flu vaccine compositions almost consistently over the past two decades for  H1N1 and H3N2 subtypes, individually in the Northern and the Southern hemispheres (HA: $34.8\% $ improvement, NA: $12.5\%$ improvement), we assess  the pandemic potential  of novel animal  strains that do not yet circulate in humans. While the state-of-the-art  Influenza Risk Assessment Tool (IRAT) from the Center for Disease Control (CDC) comprises multiple time-consuming experimental assays, our proposed \erisk score can be evaluated in $6-8$ seconds for each new strain, while strongly correlating with the published IRAT scores (correlation=0.703, p-value $= 0.00026$). This approximately six orders of magnitude speedup (weeks vs seconds) in  identifying risky strains is a necessary step to fully exploit the  current surveillance capacity via scalably analyzing tens of thousands of strains collected every year. Thus, our results potentially  enable  meaningful preemptive pandemic avoidance and mitigation strategies, which are especially relevant in the light of the recent COVID-19 pandemic.
+  {\normalfont \itshape Abstract:} Novel \infl  strains emerging into humans from animal reservoirs can cause large antigenic shifts in the circulating strain, and  are suspected to have triggered devastating  pandemics in the past~\cite{shao2017evolution,mills2004transmissibility,reid2003origin,landolt2007up}. Yet, our current ability to  scalably  evaluate the pandemic potential of   individual strains that do not yet circulate in humans remains limited. In this study, we introduce a computational approach, known as the \enet,  to learn how viable genotypic variations are shaped by  emergent evolutionary constraints using only genomic sequence data of collected strains.    Analyzing    Hemaglutinnin (HA) and Neuraminidase (NA) amino acid sequences from nearly 100,000 unique \infl  strains from public  databases, our proposed algorithm merges machine learning and large deviation theory to  estimate the likelihood of  specific future  mutations, ultimately  yielding the  numerical odds of one parent strain giving rise to a specific descendant via natural evolutionary processes. After validating our model on the problem of forecasting the dominant strain(s) of the upcoming flu season, with \enet-based forecasts significantly outperforming World Health Organization (WHO) recommended flu vaccine compositions almost consistently over the past two decades for  H1N1 and H3N2 subtypes, individually in the Northern and the Southern hemispheres (HA: $34.8\% $ improvement, NA: $12.5\%$ improvement), we assess  the pandemic potential  of novel animal  strains that do not yet circulate in humans. While the state-of-the-art  Influenza Risk Assessment Tool (IRAT) from the Center for Disease Control (CDC) comprises multiple time-consuming experimental assays, our proposed \erisk score can be evaluated in $\approx 6$ seconds for each new strain, while strongly correlating with the published IRAT scores (correlation=0.703, p-value $= 0.00026$). This approximately six orders of magnitude speedup (weeks vs seconds) in  identifying risky strains is a necessary step to fully exploit the  current surveillance capacity via scalably analyzing tens of thousands of strains collected every year. Thus, our results potentially  enable  meaningful preemptive pandemic avoidance and mitigation strategies, which are especially relevant in the light of the recent pandemic.
 }
   
 \vspace{10pt}
