--- a/tex/Figures/figpred.tex
+++ b/tex/Figures/figpred.tex
@@ -134,7 +134,7 @@
       yticklabel style={xshift=-.015in}, nodes near coords,
       point meta=explicit symbolic,
       table/meta=strain,      axis on top=false,
-      ymax=7.6,      xlabel={geometric mean of HA and NA \qdist },ylabel={IRAT emergence score},xlabel style={yshift=-.1in},ylabel style={yshift=-.15in},
+      ymax=7.6,      xlabel={geometric mean of HA and NA \qdist },ylabel={CDC computed IRAT emergence score},xlabel style={yshift=-.1in},ylabel style={yshift=-.12in},
 %axis x line=bottom,
 %axis y line=left,
 ymin=2.65,
@@ -329,7 +329,7 @@ ymax=7.7,
       axis on top=false,
       ymax=7.6,
       xmin=3.25,xmax=6.8,      xlabel={predicted emergence score},
-      ylabel={IRAT emergence score},,xlabel style={yshift=-.05in,xshift=0in},ylabel style={yshift=-.225in},
+      ylabel={IRAT emergence score (CDC)},,xlabel style={yshift=-.05in,xshift=0in},ylabel style={yshift=-.225in,xshift=-.2in},
       ]
 
         \addplot[smooth, only marks, mark=*, mark options={fill=white,scale=.8},, opacity=1,mark=none, ] table[col sep=comma,
@@ -382,7 +382,7 @@ ymax=7.7,
       axis on top=false,
       ymax=7.6,      xmin=3.75,xmax=6.8,
       xlabel={predicted impact score},
-      ylabel={IRAT impact score},,xlabel style={yshift=-.05in,xshift=0in},ylabel style={yshift=-.225in},
+      ylabel={IRAT impact score (CDC)},,xlabel style={yshift=-.05in,xshift=0in},ylabel style={yshift=-.225in,xshift=-.2in},
       ]
 
       
