--- a/tex/allbib.bib
+++ b/tex/allbib.bib
@@ -1,3 +1,33 @@
+@article{ma2009pig,
+  title={The pig as a mixing vessel for influenza viruses: human and veterinary implications},
+  author={Ma, Wenjun and Kahn, Robert E and Richt, Juergen A},
+  journal={Journal of molecular and genetic medicine: an international journal of biomedical research},
+  volume={3},
+  number={1},
+  pages={158},
+  year={2009},
+  publisher={Library Publishing Media}
+}
+
+@article{sun2021mink,
+  title={Mink is a highly susceptible host species to circulating human and avian influenza viruses},
+  author={Sun, Honglei and Li, Fangtao and Liu, Qingzhi and Du, Jianyong and Liu, Litao and Sun, Haoran and Li, Chong and Liu, Jiyu and Zhang, Xin and Yang, Jizhe and others},
+  journal={Emerging microbes \& infections},
+  volume={10},
+  number={1},
+  pages={472--480},
+  year={2021},
+  publisher={Taylor \& Francis}
+}
+@article{qi2013probable,
+  title={Probable person to person transmission of novel avian influenza A (H7N9) virus in Eastern China, 2013: epidemiological investigation},
+  author={Qi, Xian and Qian, Yan-Hua and Bao, Chang-Jun and Guo, Xi-Ling and Cui, Lun-Biao and Tang, Fen-Yang and Ji, Hong and Huang, Yong and Cai, Pei-Quan and Lu, Bing and others},
+  journal={Bmj},
+  volume={347},
+  year={2013},
+  publisher={British Medical Journal Publishing Group}
+}
+
 @article{pulliam2009ability,
   title={Ability to replicate in the cytoplasm predicts zoonotic transmission of livestock viruses},
   author={Pulliam, Juliet RC and Dushoff, Jonathan},
