--- a/tex/figuresandtables.tex
+++ b/tex/figuresandtables.tex
@@ -146,17 +146,17 @@
   \tikzexternalenable
   \tikzsetnextfilename{riskyseq}
   \centering
-  %\tikzXtrue
-
+ %\tikzXtrue
+ 
   
   \iftikzX  
   \input{Figures/sequence_risky}
  \else
-  \includegraphics[width=\textwidth]{Figures/External/riskyseq}
+  \includegraphics[width=.95\textwidth]{Figures/External/riskyseq}
   \fi 
-  \vspace{-30pt}
+  \vspace{-18pt}
   
-\captionN{HA sequence comparison  with dominant human strains (H1N1, H3N2)  with \enet estimated top risky strains (2020-2022 April), showing substantial differences from the circulating strains both in and out of the RBD. }\label{figriskyseq}
+\captionN{HA sequence comparison  with dominant human strains (DOM\_HUMAN H1N1, H3N2)  with \enet estimated top 5 risky strains (2020-2022 April) along with the teh most risky H9N2 strain (A/mink/China/chick embryo/2020), showing substantial differences from the circulating strains both in and out of the RBD. }\label{figriskyseq}
 \end{figure}
 \else
 \refstepcounter{figure}\label{figriskyseq}
