--- a/tex/main.tex
+++ b/tex/main.tex
@@ -12,7 +12,7 @@
 \def\Extended{}
 \newif\ifFIGS
 \FIGSfalse  
-\FIGStrue 
+%\FIGStrue 
 
 \def\METHODS{Online Methods\xspace}
 
@@ -61,7 +61,11 @@
 \maketitle
 
 {\bf \sffamily \fontsize{10}{12}\selectfont \noindent   
-  {\normalfont \itshape Abstract:} Animal \infl  strains emerging into humans can introduce large antigenic shifts in the circulating  population, and  are suspected to have triggered devastating  pandemics in the past~\cite{shao2017evolution,mills2004transmissibility,reid2003origin,landolt2007up}. Yet, our current ability to  scalably  evaluate the pandemic potential of   individual strains that do not yet circulate in humans, remains limited. In this study we introduce the \enet,  to computationally learn how viable genotypic variations are shaped by   evolutionary constraints using only genomic sequences  of key viral proteins.    Analyzing    Hemaglutinnin (HA) and Neuraminidase (NA) amino acid sequences from nearly 100,000 unique \infl  strains recorded in public  databases,  we estimate the likelihood of  specific future  mutations, ultimately  yielding the  numerical odds of one parent strain giving rise to a specific descendant via natural evolutionary processes. After validating our model on the problem of forecasting the dominant strain(s) in the upcoming flu season, with \enet-based forecasts significantly outperforming WHO recommended flu vaccine compositions almost consistently over the past two decades for  H1N1/H3N2 subtypes, individually in the Northern/Southern hemispheres (HA: $34.8\% $ improvement, NA: $12.5\%$ improvement), we assess  the pandemic potential  of novel animal  strains that do not yet circulate in humans. While the state-of-the-art  Influenza Risk Assessment Tool (IRAT) from the CDC comprises multiple time-consuming experimental assays, our proposed \erisk score can be evaluated in $\approx 6$ seconds for each new strain, while strongly correlating with published IRAT scores (correlation=$0.703$, p-value $= 0.00026$). This  six orders of magnitude speedup (weeks vs seconds) in  identifying risky strains is a necessary step to fully exploit the  current surveillance capacity via scalably analyzing tens of thousands of strains collected every year. Applying our tool to all \infl strains recently collected in the wild (post-2020, 6066 in total), we  identify a small number of strains of diverse subtypes, in diverse hosts and geo-locations, that pose the maximal risk ($6$ with estimated IRAT emergence score $> 6.5$). Such scalable risk-ranking  can   enable follow-up targeted investigations, and meaningful preemptive pandemic mitigation strategies, which are especially relevant in the light of the recent pandemic.
+  {\normalfont \itshape Abstract:} Animal \infl  strains emerging into humans % can introduce large antigenic shifts in the circulating  population, and
+  are suspected to have triggered devastating  pandemics in the past~\cite{shao2017evolution,mills2004transmissibility,reid2003origin,landolt2007up}. Yet, our  ability to  scalably  evaluate the pandemic potential of   individual strains that do not yet circulate in humans, remains limited. In this study we introduce the \enet,  to computationally learn how viable genotypic variations are shaped by   evolutionary constraints using only genomic sequences  of key viral proteins.  Analyzing    Hemaglutinnin (HA) and Neuraminidase (NA)  sequences from nearly 100,000  unique strains,  we estimate the likelihood of  specific future  mutations,   yielding the  numerical odds of one  strain giving rise to a specific descendant via natural % evolutionary
+  processes. After validating our model to forecast the dominant strain(s) for seasonal flu, with \enet-based forecasts significantly outperforming WHO recommendations almost consistently over the past two decades for  H1N1/H3N2 subtypes, individually in the Northern/Southern hemispheres (HA: $34.8\% $ improvement, NA: $12.5\%$ improvement), we assess  the pandemic potential  of  animal  strains that do not yet circulate in humans. While the state-of-the-art  Influenza Risk Assessment Tool (IRAT) from the CDC comprises multiple time-consuming experimental assays, our proposed \erisk score can be evaluated in $\approx 6$ seconds per strain, while strongly correlating with published IRAT scores (correlation=$0.703$, p-value $= 0.00026$). This  six orders of magnitude speedup (weeks vs seconds) in  identifying risky strains is a necessary step to exploit the  current surveillance capacity via scalably analyzing thousands of strains collected annually. Analyzing 6,066 \infl strains  collected post 2020, we  identify  strains of diverse subtypes,  hosts and geo-locations posing maximal  risk,  with $6$ having estimated  emergence scores $> 6.5$). Such scalable risk-ranking % of individual strains
+  can   enable  meaningful preemptive pandemic mitigation, including targeted inoculation of animal hosts before the first human infection, % Such strategies might be particularly relevant to evade or mitigate the next pandemic
+and  outline new public health measures effective notwithstanding possible vaccine hesitancy in humans that  impact optimal pandemic response.
 }
   
 \vspace{10pt}
@@ -75,25 +79,28 @@ A possible approach to mitigating such risk is to identify  animal strains  that
 
 The Center for Disease Control's (CDC) current solution to preempt strain-specific emergence  is the Influenza Risk Assessment Tool (IRAT)~\cite{Influenz24:online},
 which reflects evaluations% which  comprises  ten weighted risk elements evaluated 
-by subject matter experts (SME) from the CDC, the Food and Drug Administration (FDA), the Animal and Plant Health Inspection Service (APHIS), and the Agricultural Research Service (ARS). Each SME scores 1-3 elements from a set of ten factors comprising the number of recorded human infections, transmission in laboratory animals, receptor binding characteristics, population immunity, animal infections, genomic analysis, antigenic relatedness, global prevalence,  pathogenesis, and antiviral treatment options. The point estimates for each  element are averaged across SMEs, scaled by predetermined weights, and summed to give an aggregate score for each of the two IRAT questions: 1) the potential risk for emergence in humans and 2) the potential public health impact if the virus gains HH capability. The scores  are potentially subjective, and  involve multiple experimental assays, possibly taking  weeks to compile for a single strain or lineage. This results in  a scalability bottleneck: with   global  efforts   collecting  thousands of sequences annually,  IRAT assessment protocols are  not fast enough to leverage the full capacity of current surveillance output.
+by subject matter experts (SME) from the CDC, the Food and Drug Administration (FDA), the Animal and Plant Health Inspection Service (APHIS), and the Agricultural Research Service (ARS). Each SME scores 1-3 elements from a set of ten factors comprising the number of recorded human infections, transmission in laboratory animals, receptor binding characteristics, population immunity, animal infections, genomic analysis, antigenic relatedness, global prevalence,  pathogenesis, and  treatment options. The point estimates  are averaged across SMEs, scaled by predetermined weights, and summed to give an aggregate score for each of the two questions: 1) the emergence  risk and 2) the potential public health impact on sustained transmission. The scores  are potentially subjective, and  involve multiple experimental assays, possibly taking  weeks to compile for a single strain or lineage. This results in  a scalability bottleneck: with   global  efforts   collecting  thousands of sequences annually,  IRAT assessment is  not fast enough to fully leverage  current surveillance output.
 
-Here we introduce a pattern recognition algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild, to numerically estimate the probability $Pr(x \rightarrow y)$ of a strain $x$ spontaneously giving rise to  $y$. We show that this capability is key to preempting  strains which are expected to be in future circulation, and thus 1) reliably forecast dominant strains of seasonal epidemics, and 2) approximate IRAT scores of non-human strains without  experimental assays or direct involvement of  SMEs.
+Here we introduce a pattern recognition algorithm to automatically parse out emergent evolutionary constraints operating on \infl viruses in the wild, to numerically estimate the probability $Pr(x \rightarrow y)$ of a strain $x$ spontaneously giving rise to  $y$. We show that this capability is key to preempting  strains which are expected to be in future circulation, and  1) reliably forecast dominant strains of seasonal epidemics, and 2) approximate IRAT scores of non-human strains without  experimental assays or  SME scoring.
 
-To uncover relevant evolutionary constraints, we analyzed observed variations (point substitutions and indels) of the  amino acid (AA)  sequences  of the two key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza,shao2017evolution}, namely HA and NA respectively. By representing these constraints within a predictive framework -- the \enet -- we estimated the  odds of a specific mutation to arise in a given strain, and consequently the probability of a specific strain spontaneously  evolving into another.  Such explicit calculations are difficult  without first inferring the % emergent constraints at play,  as well as  the
-variation of mutational probabilities and the potential residue replacements from one positional index to the next along the residue sequence of a protein. The many well-known classical  DNA  substitution models~\cite{posada1998modeltest} or standard approaches to phylogenetic tree inference which assume a constant mutation rate or some variation thereof, do not address these issues, and are not applicable to the problem at hand. Similarly, recently reported algorithms such  as FluLeap~\cite{eng2014predicting}  which identfies host tropism from sequence data, or estimating risk posed by different viral species~\cite{grange2021ranking} do not allow strain-specific risk assessment.
+To uncover relevant evolutionary constraints, we analyzed  variations (point substitutions and indels) of the  residue  sequences  of the two key proteins implicated  in cellular entry and exit~\cite{gamblin2010influenza,shao2017evolution}, namely HA and NA respectively. By representing these constraints within a predictive framework -- the \enet -- we estimated the  odds of a specific mutation to arise in a given strain, and consequently the probability of a specific strain spontaneously  evolving into another.  Such explicit calculations are difficult  without first inferring the % emergent constraints at play,  as well as  the
+variation of mutational probabilities and the potential residue replacements from one positional index to the next along the protein sequence. The many well-known classical  DNA  substitution models~\cite{posada1998modeltest} or standard phylogeny inference tools which assume a constant species-wise mutational characteristics,  are not applicable to the problem at hand. Similarly, recently reported algorithms such  as FluLeap~\cite{eng2014predicting}  which identfies host tropism from sequence data, or estimating risk posed by different viral species~\cite{grange2021ranking} do not allow strain-specific risk assessment.
 
 The genomic dependencies we uncover are shaped by  a  functional necessity of conserving/augmenting  fitness in the wild. A  strain must be sufficiently common  to be recorded, implying that the sequences from public databases that we train  with have  high replicative fitness. Lacking kinetic proofreading  in  RNA-polymerase,  \infl integrates  faulty nucleotides   at a relatively high rate ($10^{-3}-10^{-4}$) during  replication~\cite{ahlquist2002rna,chen2006avian}. However, few   of these variations are actually viable, % with only specific patterns  maintaining/gaining fitness;
-leading to emergent dependencies between such changes. Furthermore, these fitness constraints are not time-invariant. The background distribution of strains, and selection pressure from the evolution of cytotoxic T lymphocyte  epitopes~\cite{woolthuis2016long,fan2012role,van2016differential,berkhoff2007assessment,van2012evasion} in humans can change quickly. With a sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to  % track these  constraints,
-automatically reflect the effect of an evolving host immunity, and the current background strain distribution.  
+leading to emergent dependencies between such mutations. Furthermore, these fitness constraints are not time-invariant. The background strain distribution, and selection pressure from the evolution of cytotoxic T lymphocyte  epitopes~\cite{woolthuis2016long,fan2012role,van2016differential,berkhoff2007assessment,van2012evasion} in humans can change quickly. With a sufficient number of unique samples to train on for each flu season, the \enet (recomputed for each time-period) is expected to automatically reflect the effect of evolving host immunity, and the current background environment.  
 
-Structurally, an \enet comprises an interdependent collection of  local predictors: each aiming to predict the  residue at a particular index  using as features (input variables) the residues appearing  at other  indices  (Fig.~\ref{figscheme}b). Thus,  an \enet comprises atmost as many such  position-specific predictors as the length of the sequence. These individual predictors are implemented as conditional inference trees~\cite{Hothorn06unbiasedrecursive}, in which  nodal splits  have  a minimum pre-specified significance in differentiating the  child nodes. Inferring residue predictors at each  index as  functions of the rest of the sequence  yields an estimated conditional residue distribution  at each index. The set of indices acting as features in each tree varies, $e.g.$, in the fragment of the  H1N1 HA \enet (2020-2021, Fig~\ref{figscheme}b), the predictor for residue at index 63 is dependent on   residue  155, and the predictor for  155 is dependent on  223, the predictor for  223 is dependent on  14, and the residue at  14 is dependent on  63, revealing a cyclic dependency. The complete \enet harbors a vast number of such  relationships, wherein each internal node of a tree may be  ``expanded'' to its own tree. Owing to this recursive expansion,  a complete \enet is hard to visualize; nevertheless it captures the complexity of the rules guiding evolutionary change substantially better than earlier attempts, as evidenced by our validation results.
+Structurally, an \enet comprises an interdependent collection of  local predictors: each aiming to predict the  residue at a particular index  using as features  the residues appearing  at other  indices  (Fig.~\ref{figscheme}b). Thus,  an \enet comprises atmost as many such  position-specific predictors as the length of the sequence. These individual predictors are implemented as conditional inference trees~\cite{Hothorn06unbiasedrecursive}, in which  nodal splits  have  a minimum pre-specified significance in differentiating the  child nodes. Thus, each predictor % Inferring residue predictors at each  index as  functions of the rest of the sequence
+yields an estimated conditional residue distribution  at each index. The set of indices acting as features in each predictor varies, $e.g.$, in the fragment of the  H1N1 HA \enet (2020-2021, Fig~\ref{figscheme}b), the predictor for residue at index 63 is dependent on   residue  155, and the predictor for  155 is dependent on  223, the predictor for  223 is dependent on  14, and the residue at  14 is dependent on  63, revealing a cyclic dependency. The complete \enet harbors a vast number of such  relationships, wherein each internal node of a tree may be  ``expanded'' to its own tree. Owing to this recursive expansion,  a complete \enet % is hard to visualize; nevertheless it
+substantially captures the complexity of the rules guiding evolutionary change % substantially better than earlier attempts,
+as evidenced by our out-of-sample validation.
 
 %\DQS{do we have a table here for sequences collected for each year?}
-In this study we used  HA and NA  sequences from  all unique \infl strains in the NCBI and GISAID databases recorded between 2000-2022 (98,299 strains in total). We  construct \enet{s} separately for H1N1 and H3N2 subtypes, and for each flu season, constructing in total $85$ models for predicting seasonal dominance. % # of models: 16 that i computed + 69 precomputed in quasinet package %Dominant strain forecasts are made for each  season and  each hemisphere separately.
-We use  no detailed phenotypic characteristics of the strains, which is advantageous since antigenic characterization  tend to be substantially  laborious and low-throughput compared to genome sequencing~\cite{wood2012reproducibility}.  however,  incorporation of  deep mutational scanning (DMS) assays  have been shown to improve prediction of seasonal strains~\cite{huddleston2020integrating}. Despite limiting ourselves to only genotypic  information (and subtypes), our approach is able to distill  emergent  fitness-preserving constraints   outperforming reported DMS  augmented strategies for \infl.
+In this study we used  HA and NA  sequences from   unique \infl strains in the public NCBI and GISAID databases recorded between 2000-2022 (98,299 in total). We  construct \enet{s} separately for H1N1 and H3N2 subtypes, and for each flu season, yielding $85$ models in total for predicting seasonal dominance. % # of models: 16 that i computed + 69 precomputed in quasinet package %Dominant strain forecasts are made for each  season and  each hemisphere separately.
+% We use  no detailed phenotypic characteristics of the strains, which 
+This is advantageous since deep antigenic characterization  tend to be substantially  low-throughput compared to genome sequencing~\cite{wood2012reproducibility}, and  incorporation of  deep mutational scanning (DMS) assays  can improve seasonal prediction~\cite{huddleston2020integrating}. Despite limiting ourselves to only genotypic  information (and subtypes), our approach  distills  emergent  fitness-preserving constraints   that outperform reported DMS-augmented strategies.
 
-Inference of the \enet components is the first step in our approach, which then induces  an intrinsic distance metric between strains. The \qdist  (Eq.~\eqref{q-distance} in \METHODS) is defined as the square-root of the Jensen-Shannon (JS) divergence~\cite{cover} of the conditional residue distributions, averaged over the sequence. Unlike the classical approach of measuring the number of edits between sequences, the \qdist is informed by the \enet-inferred  dependencies, and adapts to the specific subtype, allele frequencies, and environmental variations. Central to our approach is the theoretical result (Theorem~\ref{thmbnd} in \METHODS) that   $\log Pr(x \rightarrow y )$   may be approximated by the  \qdist $\theta(x,y)$. The mathematical intuition  relating  \qdist  to the loglikelihood of spontaneous change  is similar to quantifying the  odds of  a rare biased outcome when we  toss a fair coin~\cite{varadhan2010large}. % Generalizing to non-uniform conditional distributions inferred by the \enet, the likelihood of a spontaneous transition  by random chance may also be similarly bounded.
-Importantly, unlike the edit distance, the \qdist  between two fixed sequences may change even if only the background strain population changes (SI-Table~\ref{SI-tabex} illustrates that  the distance between  fixed  sequences vary with collection years.%, $i.e.$,  the background environment), implying that the \enet framework can track the variation of emergence risk over time (Fig.timelineXXX).
+Inference of the \enet predictors is our first step, which then induces  an intrinsic distance metric between strains. The \qdist  (Eq.~\eqref{q-distance} in \METHODS) is defined as the square-root of the Jensen-Shannon (JS) divergence~\cite{cover} of the conditional residue distributions, averaged over the sequence. Unlike the classical approach of measuring the number of edits between sequences, the \qdist is informed by the \enet-inferred  dependencies, and adapts to the specific subtype, allele frequencies, and environmental variations. Central to our approach is the theoretical result (Theorem~\ref{thmbnd} in \METHODS) that   $\log Pr(x \rightarrow y )$   may be approximated by the  \qdist $\theta(x,y)$. The mathematical intuition  relating  \qdist  to the loglikelihood of spontaneous change  is similar to quantifying the  odds of  a rare biased outcome when we  toss a fair coin~\cite{varadhan2010large}. % Generalizing to non-uniform conditional distributions inferred by the \enet, the likelihood of a spontaneous transition  by random chance may also be similarly bounded.
+Importantly, unlike the edit distance, the \qdist  between two fixed sequences may change  if only the background strain population changes (SI-Table~\ref{SI-tabex} illustrates that  the distance between  fixed  sequences vary with collection years.%, $i.e.$,  the background environment), implying that the \enet framework can track the variation of emergence risk over time (Fig.timelineXXX).
 %Sequences may have a large \qdist and a small edit distance, and vice versa (although on average the two distances tend to be positively correlated, see SI-Table~\ref{SI-tabcor}).
 
 
@@ -107,7 +114,7 @@ In the context of  forecasting  future dominant strain(s),  we derive a search c
 }%
 where $\dst$ is a predicted dominant strain  at time $t+\delta$, $H^t$ is the set of currently circulating human strains at time $t$  observed over the past year, $\theta^{[t]}$ is the \qdist informed by the inferred \enet using sequences in $H^t$, $\mem{y}$ is the estimated probability of strain $y$ being generated by the \enet, and $A$ is a constant dependent on the sequence length and significance threshold used (See \METHODS). The first term gets the solution close to the centroid of the current strain distribution (in the \qdist metric, which is different from the centroid if the standard edit distance is used), and the second term relates to how common the genomic patterns are amongst recent human strains. 
 
-Prediction of the future dominant strain as  a close match to a historical strain  allows out-of-sample validation of the approach with past World Health Organization (WHO) recommendations for the flu shot, which  is currently reformulated about six months in advance based on a recommended cocktail of historical strains determined via global surveillance~\cite{agor2018models}. For each year of the past two decades, we calculated strain forecasts using  Eq.~\eqref{dompred} with data available six months before the target season. We  measured forecast performance by the number of mutations by which the predicted HA/NA  sequences deviated from the  dominant strain. Our \enet-informed forecasts outperform  WHO/CDC recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres (which have distinct recommendations). %The \enet  predictions consistently outperform the WHO recommendations. % For H1N1 HA, the \enet induced recommendation outperforms the WHO suggestion by $>33\%$ on average over the last two decades, and $>71\%$ on average in the last decade. The gains for H1N1 NA over the same time periods are $>15\%$ and $>52\%$, respectively. For H3N2 HA, the \enet induced recommendation outperforms the WHO suggestion by $>37\%$ on average over the last two decades, and $>40\%$ in the last decade. The gains for H3N2 NA over the same time periods are $>14\%$ and $>15\%$, respectively. Finding multi-cluster predictions has the potential to yield even more improved results, as seen in Fig.~\ref{figseasonal} and SI-Table~\ref{SI-tabrec8} through SI-Table~\ref{SI-tabrec11}. \DQS{what is multicluster}
+Prediction of the future dominant strain as  a close match to a historical strain  allows out-of-sample validation against past World Health Organization (WHO) recommendations for the flu shot, which  is  reformulated about six months in advance based on a  cocktail of historical strains determined via global surveillance~\cite{agor2018models}. For each year of the past two decades, we calculated strain forecasts using  Eq.~\eqref{dompred} with data available six months before the target season. We  measured forecast performance by the number of mutations by which the predicted HA/NA  sequences deviated from the  dominant strain. Our \enet-informed forecasts outperform  WHO/CDC recommended flu vaccine compositions almost consistently over the past two decades, for both H1N1 and H3N2 subtypes, individually in the northern and the southern hemispheres (which have distinct recommendations). %The \enet  predictions consistently outperform the WHO recommendations. % For H1N1 HA, the \enet induced recommendation outperforms the WHO suggestion by $>33\%$ on average over the last two decades, and $>71\%$ on average in the last decade. The gains for H1N1 NA over the same time periods are $>15\%$ and $>52\%$, respectively. For H3N2 HA, the \enet induced recommendation outperforms the WHO suggestion by $>37\%$ on average over the last two decades, and $>40\%$ in the last decade. The gains for H3N2 NA over the same time periods are $>14\%$ and $>15\%$, respectively. Finding multi-cluster predictions has the potential to yield even more improved results, as seen in Fig.~\ref{figseasonal} and SI-Table~\ref{SI-tabrec8} through SI-Table~\ref{SI-tabrec11}. \DQS{what is multicluster}
 %
 %\DQS{concrete numbers}
 The  results  broken down by hemisphere/protein/subtypes is given in Table~\ref{tabperf}. Fig.~\ref{figseasonal} illustrates the relative gains computed for both subtypes and the two hemispheres. % (the flu season occupy distinct time periods and may have different dominant strains in the two hemispheres~\cite{boni2008vaccination}).
